Criando a primeira suite de testes unitários, com um database in-memory simulando o repo

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "rcmonteiro <rcmonteiro@gmail.com>",
@@ -19,7 +21,9 @@
     "prisma": "5.12.1",
     "tsup": "8.0.2",
     "tsx": "4.7.2",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "vite-tsconfig-paths": "4.3.2",
+    "vitest": "1.5.0"
   },
   "dependencies": {
     "@prisma/client": "5.12.1",
