--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "rcmonteiro <rcmonteiro@gmail.com>",
@@ -17,6 +18,7 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.12.7",
+    "@vitest/coverage-v8": "1.5.0",
     "eslint": "8.57.0",
     "prisma": "5.12.1",
     "tsup": "8.0.2",
