chore: instalado o Vitest UI

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsup src --out-dir build",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "rcmonteiro <rcmonteiro@gmail.com>",
@@ -19,6 +20,7 @@
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.12.7",
     "@vitest/coverage-v8": "1.5.0",
+    "@vitest/ui": "1.5.0",
     "eslint": "8.57.0",
     "prisma": "5.12.1",
     "tsup": "8.0.2",
