chore: vitest environment for e2e

--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test:e2e": "vitest run --dir src/http",
+    "pretest:e2e": "cd prisma/vitest-environment-prisma && npm link && cd ../.. && npm link vitest-environment-prisma",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
   "keywords": [],
-  "author": "rcmonteiro <rcmonteiro@gmail.com>",
+  "author": "rcmonteiro",
   "license": "MIT",
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
