test: gyms, users and check-ins e2e tests

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "pretest:e2e": "cd prisma/vitest-environment-prisma && npm link && cd ../.. && npm link vitest-environment-prisma",
     "test": "vitest run --dir src/use-cases",
     "test:watch": "vitest --dir src/use-cases",
@@ -21,10 +22,12 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.12.7",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "1.5.0",
     "@vitest/ui": "1.5.0",
     "eslint": "8.57.0",
     "prisma": "5.12.1",
+    "supertest": "6.3.4",
     "tsup": "8.0.2",
     "tsx": "4.7.2",
     "typescript": "5.4.5",
