--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vitest": "1.5.0"
   },
   "dependencies": {
+    "@fastify/cookie": "9.3.1",
     "@fastify/jwt": "8.0.0",
     "@prisma/client": "5.12.1",
     "bcryptjs": "2.4.3",
