chore: README updated

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tsup": "8.0.2",
     "tsx": "4.7.2",
     "typescript": "5.4.5",
+    "typescript-json-schema": "0.63.0",
     "vite-tsconfig-paths": "4.3.2",
     "vitest": "1.5.0"
   },
@@ -45,7 +46,6 @@
     "dayjs": "1.11.10",
     "dotenv": "16.4.5",
     "fastify": "4.26.2",
-    "fastify-type-provider-zod": "1.1.9",
     "zod": "3.22.4"
   }
 }
